--- a/taskpane.html
+++ b/taskpane.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Laporan Produksi Shiftly</title>
-    
-    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
-    
-    <link href="taskpane.css" rel="stylesheet" type="text/css" />
-</head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Laporan Produksi Add-in</title>
 
+    <!-- Office.js -->
+    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
+
+    <!-- CSS eksternal -->
+    <link rel="stylesheet" href="taskpane.css">
+
+    <!-- JavaScript eksternal -->
+    <script src="taskpane.js" defer></script>
+
+    <style>
+        /* Bisa tambahkan CSS minimal tambahan di sini */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 10px;
+            padding: 10px;
+        }
+    </style>
+
+    <script>
+        Office.onReady((info) => {
+            if (info.host === Office.HostType.Excel) {
+                console.log("Excel Add-in siap digunakan.");
+                // Fungsi tambahan bisa dipanggil dari taskpane.js
+            }
+        });
+    </script>
+</head>
 <body>
 <div class="container">
         <h2>📊 Laporan Produksi</h2>
@@ -322,6 +343,5 @@
         </button>
         <div style="height: 50px;"></div>
     </div>
-    <script src="taskpane.js" type="text/javascript"></script>
 </body>
 </html>
